--- a/src/Login/style.css
+++ b/src/Login/style.css
@@ -1,4 +1,4 @@
-.form{
+/* .form{
     margin-top: 10%;
     margin-left: 35%;
 }
@@ -24,4 +24,56 @@
 .form h1{
 margin-left:5% ;
 font-size: 40px;
-}
+} */
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+  }
+  
+  .form-container {
+    display: flex;
+    width: 600px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .right-side {
+    background-color: orange;
+    padding: 20px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+  }
+  
+  .left-side {
+    flex: 1;
+    padding: 20px;
+  }
+  
+  .form {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  button {
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(255, 115, 0);
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
